# model_deployment

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  train.py
model/: titanic_classifier_model.pkl
notebook/: train model.ipynb
