[tool.poetry]
name = "model-deployment"
version = "0.1.0"
description = ""
authors = ["Chontira <chontira.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
